--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 <body>
 <section class="hero">
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis a voluptatibus rem expedita dolorum impedit delectus beatae, tempora eligendi quae officiis voluptatem, sapiente sint dolore veniam minima dignissimos molestiae eius!</p>
-  <div id="circle"></div>
 </section>
 <section class="subtitle">
+  <div id="circle"></div>
   <h2 data-splitting>Alignment</h2>
 </section>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
   <script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
