--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="column"></div>
         <div class="column"></div>
       </div>
+      <img class="mario" src="assets/img/goomba.png" alt="">
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js"></script>
